// Centralized version management for all modules
plugins {
    id 'org.openrewrite.rewrite' version '7.28.1' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.springframework.boot' version '4.0.3' apply false
}

ext {
    // Project version (can be overridden via -PbuildVersion=X.Y.Z)
    projectVersion = project.hasProperty('buildVersion') ? project.property('buildVersion') : '2.3.1'

    // Core dependency versions
    springBootVersion = '4.0.1'
    springDependencyManagementVersion = '1.1.8'

    // Library versions
    bcryptVersion = '0.4'
    caffeineVersion = '3.2.3'
    gsonVersion = '2.13.2'
    guavaVersion = '33.5.0-jre'
    h2Version = 'managed'
    jjwtVersion = '0.13.0'
    jsoupVersion = '1.21.2'
    lombokVersion = '1.18.42'
    seleniumVersion = '4.39.0'
    springdocVersion = '2.8.13'
    twelvemonkeysVersion = '3.13.0'
    webdrivermanagerVersion = '6.3.3'

    // Test dependency versions
    jacocoVersion = '0.8.11'

    // Tool versions
    checkstyleVersion = '10.21.1'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'jacoco'
    apply plugin: 'checkstyle'
    apply plugin: 'org.openrewrite.rewrite'

    // Set version from central definition
    version = rootProject.ext.projectVersion
    group = 'kkdad'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    // Default JaCoCo configuration for all subprojects
    jacoco {
        toolVersion = rootProject.ext.jacocoVersion
    }

    // Checkstyle configuration
    checkstyle {
        toolVersion = rootProject.ext.checkstyleVersion
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        configDirectory = rootProject.file('config/checkstyle')
        ignoreFailures = true  // Report but don't fail build initially
        maxWarnings = 0
    }

    checkstyleMain {
        source = 'src/main/java'
    }

    checkstyleTest {
        source = 'src/test/java'
        enabled = false  // Skip checkstyle on test code initially
    }

    // Add JUnit Platform Launcher for all subprojects (required by Gradle 8.5+)
    dependencies {
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:3.29.0")
        // OpenRewrite Recipes for Style and Checkstyle alignment
        rewrite("org.openrewrite.recipe:rewrite-static-analysis:2.29.0")
        rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:3.29.0")
    }

rewrite {
    configFile = rootProject.file('rewrite.yaml')
    // You only need the custom recipe name from your rewrite.yml
    // This recipe acts as a container for all the others
    activeRecipe("com.comiccacher.StyleGuide")
}
}

// Add testAll task to run all tests in all subprojects
task testAll {
    // TEMPORARY: Only run unit tests until integration tests are fixed with facade pattern
    dependsOn subprojects.collect { it.path + ':test' }
    description = 'Runs all tests in all subprojects (currently only unit tests)'
    group = 'verification'
}
